--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -15,4 +15,5 @@
     <converter:BorderClipConverter x:Key="BorderClipConverter"/>
     <converter:Text2ForegroundConverter x:Key="Text2ForegroundConverter"/>
     <converter:Double2StrConverter x:Key="Double2StrConverter"/>
+    <converter:DoubleMinConverter x:Key="DoubleMinConverter"/>
 </ResourceDictionary>
