--- a/src/Hjmos.BaseControls/Themes/Styles/Pagination.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Pagination.xaml
@@ -25,7 +25,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="RadioButton">
                     <Border x:Name="BorderRoot"  Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
-                        <ContentPresenter x:Name="contentPresenter" RecognizesAccessKey="True" VerticalAlignment="Center" Margin="6,0,0,0" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        <ContentPresenter x:Name="contentPresenter" RecognizesAccessKey="True" HorizontalAlignment="Center" VerticalAlignment="Center"  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -72,7 +72,7 @@
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch">
                         <TextBlock Text="{Binding MaxPageCount,RelativeSource={RelativeSource Mode=TemplatedParent},StringFormat=共{0:N0}页}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" />
                         <TextBlock Text="{Binding MaxNum,RelativeSource={RelativeSource Mode=TemplatedParent},StringFormat=/{0:N0}条数据}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center"/>
-                        <Button x:Name="PART_ButtonLeft" Margin="10" MinWidth="30" Padding="10,8" Style="{StaticResource ButtonIcon}" BorderBrush="{TemplateBinding BorderBrush}" controls:IconElement.Geometry="{StaticResource LeftGeometry}" Command="interactivity:ControlCommands.Prev"/>
+                        <Button x:Name="PART_ButtonLeft" Margin="10" MinWidth="30" Height="30" Padding="10,8" Style="{StaticResource ButtonIcon}" BorderBrush="{TemplateBinding BorderBrush}" controls:IconElement.Geometry="{StaticResource LeftGeometry}" Command="interactivity:ControlCommands.Prev"/>
                         <StackPanel ZIndex="999" HorizontalAlignment="Center" Orientation="Horizontal">
                             <interactivity:Interaction.Triggers>
                                 <interactivity:RoutedEventTrigger RoutedEvent="RadioButton.Checked">
@@ -89,7 +89,7 @@
                             </Border>
                             <RadioButton Name="PART_ButtonLast" Content="10" Style="{StaticResource PaginationButtonStyle}"/>
                         </StackPanel>
-                        <Button Name="PART_ButtonRight" Margin="10" MinWidth="30" Padding="10,8" Style="{StaticResource ButtonIcon}" BorderBrush="{TemplateBinding BorderBrush}" controls:IconElement.Geometry="{StaticResource RightGeometry}" Command="interactivity:ControlCommands.Next"/>
+                        <Button Name="PART_ButtonRight" Margin="10" MinWidth="30" Height="30" Padding="10,8" Style="{StaticResource ButtonIcon}" BorderBrush="{TemplateBinding BorderBrush}" controls:IconElement.Geometry="{StaticResource RightGeometry}" Command="interactivity:ControlCommands.Next"/>
                         <ComboBox ItemsSource="{TemplateBinding MaxPageRange}" Height="30" Width="75"   VerticalContentAlignment="Center" SelectedIndex="0" SelectedValue="{Binding DataCountPerPage,RelativeSource={RelativeSource Mode=TemplatedParent},Mode=TwoWay}"  Margin="10,0">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
