--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -28,5 +28,6 @@
         <ResourceDictionary Source="DataGrid.xaml"/>
         <ResourceDictionary Source="ContextMenu.xaml"/>
         <ResourceDictionary Source="CheckBox.xaml"/>
+        <ResourceDictionary Source="SearchBar.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
