--- a/src/Hjmos.BaseControls/Themes/Styles/Base/RunningBlockBaseStyle.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Base/RunningBlockBaseStyle.xaml
@@ -21,14 +21,21 @@
                             <Border x:Name="PART_Title" Visibility="{TemplateBinding Title,Converter={StaticResource Object2VisibilityConverter}}"  Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
                                 <ContentPresenter Margin="0,0,5,0" ContentSource="Title" HorizontalAlignment="Center" ContentTemplate="{TemplateBinding TitleTemplate}" ContentTemplateSelector="{TemplateBinding TitleTemplateSelector}" ContentStringFormat="{TemplateBinding TitleStringFormat}"/>
                             </Border>
-                            <controls:SimplePanel HorizontalAlignment="Left" x:Name="PART_Panel" Grid.Column="1">
-                                <ContentPresenter x:Name="PART_ContentElement" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+                            <controls:SimplePanel HorizontalAlignment="Left" x:Name="PART_Panel" Grid.Column="1" >
+                                <!--<ContentPresenter x:Name="PART_ContentElement" RenderTransformOrigin="0.5,0.5" ContentSource="Title1"  HorizontalAlignment="Left" VerticalAlignment="Center">
                                     <ContentPresenter.RenderTransform>
                                         <TransformGroup>
                                             <TranslateTransform/>
                                         </TransformGroup>
                                     </ContentPresenter.RenderTransform>
-                                </ContentPresenter>
+                                </ContentPresenter>-->
+                                <!--<TextBlock x:Name="PART_ContentElement" TextWrapping="WrapWithOverflow" Width="{Binding  WidthText,RelativeSource={RelativeSource Mode=TemplatedParent},Mode=TwoWay}" RenderTransformOrigin="0.5,0.5" Background="Red" FontSize="{TemplateBinding FontSize}"   HorizontalAlignment="Left" VerticalAlignment="Center">
+                                    <TextBlock.RenderTransform>
+                                        <TransformGroup>
+                                            <TranslateTransform/>
+                                        </TransformGroup>
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>-->
                             </controls:SimplePanel>
                         </Grid>
                     </Border>
@@ -40,5 +47,13 @@
                 <Setter Property="Padding" Value="10.0"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="RunningTextBlock" TargetType="TextBlock">
+        <Setter Property="RenderTransformOrigin" Value="0.5,0.5"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Background" Value="Transparent"/>
     </Style>
 </ResourceDictionary>
