--- a/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Converters.xaml
@@ -16,4 +16,5 @@
     <converter:Text2ForegroundConverter x:Key="Text2ForegroundConverter"/>
     <converter:Double2StrConverter x:Key="Double2StrConverter"/>
     <converter:DoubleMinConverter x:Key="DoubleMinConverter"/>
+    <converter:Object2StringConverter x:Key="Object2StringConverter"/>
 </ResourceDictionary>
