--- a/Tests/Controltest/UserControl1.xaml
+++ b/Tests/Controltest/UserControl1.xaml
@@ -4,9 +4,57 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:controls="clr-namespace:Hjmos.BaseControls.Controls;assembly=Hjmos.BaseControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d" Height="245" Width="329.916">
     <Grid>
-       
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Left">
+            <Button x:Name="PART_Switch"   Content="切换" FontSize="10" Foreground="#2FA7BA " BorderThickness="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <TextBlock Text="广州" FontSize="15" Foreground="#30FFFF" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </StackPanel>
+        <TextBlock Grid.Row="0" Text="4分钟之前更新" FontSize="10" Foreground="#8AB5BC" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,0"/>
+        <Border Grid.Row="1" BorderBrush="#1A8392" BorderThickness="0,0,0,1" >
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal" Grid.Column="0" HorizontalAlignment="Left" Margin="10,0,0,0" >
+                    <controls:ImageViewer ImageSource="pack://application:,,,/Controltest;component/image/太阳.svg"  Width="35" HorizontalAlignment="Center"/>
+                    <TextBlock Text="晴" FontSize="10" Foreground="White" VerticalAlignment="Center" Margin="10,0,0,0" />
+                    <TextBlock Text="/20℃" FontSize="10" Foreground="White" VerticalAlignment="Center"/>
+                </StackPanel>
+                <controls:ImageViewer ImageSource="pack://application:,,,/Controltest;component/image/水滴.svg" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="10"  Width="25"/>
+            </Grid>
+        </Border>
+        <Grid Grid.Row="2">
+            <Grid.Background>
+                <ImageBrush/>
+            </Grid.Background>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="0.5*"/>
+                
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock  Grid.Row="0" Grid.Column="0" Text="东北风" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="0" Grid.Column="2" Text="2级" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="0" Grid.Column="3" Text="降水量" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="0" Grid.Column="5" Text="0.0mm" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="1" Grid.Column="0" Text="温度" Margin="0,10"  FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="1" Grid.Column="2" Text="46%" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="1" Grid.Column="3" Text="大气压强" Margin="10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+            <TextBlock  Grid.Row="1" Grid.Column="5" Text="1010hpa" Margin="0,10" FontSize="10" Foreground="#C0FFFC" HorizontalAlignment="Left"/>
+        </Grid>
     </Grid>
 </UserControl>
