设备告警趋势

--- a/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
+++ b/src/Hjmos.CustomCharts/Themes/Styles/Style.xaml
@@ -7,5 +7,6 @@
         <ResourceDictionary Source="AverageDailyPassengerFlowTop10.xaml"/>
         <ResourceDictionary Source="BigDataMonitor.xaml"/>
         <ResourceDictionary Source="PassengerFlowTrend.xaml"/>
+        <ResourceDictionary Source="DeviceAlarmBarChart.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
